--- a/src/app/page-content/search-and-navigation/search-and-navigation.component.scss
+++ b/src/app/page-content/search-and-navigation/search-and-navigation.component.scss
@@ -53,6 +53,7 @@
         cursor: pointer;
         width: 16px;
         height: 16px;
+        margin: auto 0;
         margin-right: 12px;
     }
 }
