--- a/src/app/page-content/page-content.component.html
+++ b/src/app/page-content/page-content.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="search-and-navigation">
-        <app-search-and-navigation></app-search-and-navigation>
+    <div class="search">
+        <app-search></app-search>
     </div>
     <div class="gifs-grid">
         <app-gifs-grid [gifs]="(giphyService.gif$ | async)?.data"></app-gifs-grid>
