--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="background">
-  <div class="container">
+  <div class="content">
     <app-topbar></app-topbar>
     <app-page-content></app-page-content>
   </div>
