--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,8 +3,9 @@
     background-position: center;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
-.container {
+.content {
     height: 100%;
     background: linear-gradient(180deg, rgba(49, 45, 54, 0) 61.46%, #312d36),
         linear-gradient(72.21deg, #312d36, rgba(49, 45, 54, 0)),
